--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -146,7 +146,7 @@
                 </div> -->
                 </form>
                 <!-- </div> -->
-                <div class="alert alert-success col-md-12" *ngIf="isLoggedIn">
+                <div style="display:flex; margin:30px" class="alert alert-success" *ngIf="isLoggedIn">
                     Logged in as {{ username }}.
                 </div>
 
