--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.scss
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.scss
@@ -11,6 +11,7 @@
   .mat-column-ClassFeeId{
     flex: 1 1 70px;
   }
+  .mat-column-PaymentOrder,
   .mat-column-Amount,
   .mat-column-Rate,
   .mat-column-Quantity,
