--- a/src/app/modules/student/searchstudent/searchstudent.component.scss
+++ b/src/app/modules/student/searchstudent/searchstudent.component.scss
@@ -27,7 +27,7 @@ mat-header-cell{
     border-color: lightgray;
     border-style: solid;
     padding: 5px;    
-    
+    align-self: stretch;
 }
 .mat-column-ClassName{
     flex : none;
