--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -108,6 +108,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <hr style="width:96%;margin-top: 0px;">
                             <div
                                 style="display:flex;flex-direction: column;justify-content: space-around;margin: 15px;">
                                 <div style="font-weight: bold;">Bill To</div>
