--- a/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
+++ b/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
@@ -48,7 +48,7 @@
                         <span [ngStyle]="item.Description" [innerHTML]="item.MasterDataName"></span>
                     </div>
                 </div>
-
+                <hr style="width:100%;margin-top: 0px;">
                 <div style="display:flex; justify-content: space-between ;margin-right: 15px;">
                     <div style="display:flex;flex-direction: column;">
                         <div style="display:flex">
