--- a/src/app/modules/control/contact/addMessage/contact.component.html
+++ b/src/app/modules/control/contact/addMessage/contact.component.html
@@ -3,7 +3,7 @@
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
         <form [formGroup]="ContactForm" *ngIf="SuccessMessage.length==0">
-            <div fxLayout="column" class="container">
+            <div fxLayout="column" style="display:flex;">
                 <mat-form-field appearance="outline" [style.width.px]="300">
                     <mat-label>Name</mat-label>
                     <input formControlName="Name" #Name matInput [maxlength]="30" autocomplete="Off" required>
@@ -28,9 +28,9 @@
                     <span class="text-danger" *ngIf="f.Subject.touched && f.Subject.hasError('required')">Subject
                         is required.</span>
                 </mat-form-field>
-                <mat-form-field appearance="outline" fxFlex [style.width.px]="300">
+                <mat-form-field appearance="outline" fxFlex style="max-width:400px">
                     <mat-label>Message</mat-label>
-                    <textarea formControlName="MessageBody" #MessageBody [style.height.px]="100" matInput [maxlength]="250" autocomplete="Off"
+                    <textarea formControlName="MessageBody" #MessageBody [rows]="5" [cols]="30" matInput [maxlength]="250" autocomplete="Off"
                         cdkTextareaAutosize required></textarea>
                     <!-- <mat-hint align="end">{{MessageBody.value?.length || 0}}/250</mat-hint> -->
                     <span class="text-danger"
@@ -50,6 +50,6 @@
         </div>
     </mat-card-content>
     <mat-card-actions>
-    <button [disabled]="loading" class="mat-raised-button" (click)="back()"><mat-icon>arrow_back</mat-icon></button>
+    <button [disabled]="loading" style="margin-left: 10px;" class="mat-raised-button" (click)="back()"><mat-icon>arrow_back</mat-icon></button>
     </mat-card-actions>
 </mat-card>
