--- a/src/app/modules/dashboard/homedashboard/homedashboard.component.scss
+++ b/src/app/modules/dashboard/homedashboard/homedashboard.component.scss
@@ -13,6 +13,7 @@ mat-form-field,button{
     position: relative;
     height: max-content;
     //margin-top:100px; 
-    margin: 60px;
-    width: 100%;
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 98%;
 }
